--- a/css/main.scss
+++ b/css/main.scss
@@ -551,6 +551,15 @@ video {
   list-style: none;
   padding: 0;
   z-index: 1;
+
+  &.swiper-reviews__main {
+    .swiper-wrapper {
+      @media screen and (min-width: 768px) {
+        margin-bottom: 125px;
+      }
+      
+    }
+  }
 }
 
 .swiper-vertical > .swiper-wrapper {
@@ -1242,6 +1251,12 @@ body {
   &.container__medium{
     margin-top: 2.5rem;
   }
+  &.container__big{
+    margin-top: 3rem;
+    @media screen and (min-width: 768px) {
+      margin-top: 5rem;
+    }
+  }
 
 
   @media screen and (min-width: 768px) {
@@ -1378,6 +1393,8 @@ body {
   font-weight: 500;
   text-transform: uppercase;
   color: var(--color-accent);
+  display: flex;
+  align-items: center;
 }
 @media screen and (min-width: 1280px) {
   .rubric-head {
@@ -1388,6 +1405,10 @@ body {
   font-family: "icons";
   content: "\f0000";
   margin-left: 8px;
+  font-size: 22px;
+  @media screen and (min-width: 768px) {
+    font-size: 30px;
+  }
 }
 
 .social-list {
@@ -1421,7 +1442,13 @@ body {
   transition: all .3s ease;
 
   svg {
-    max-width: 20px;
+    max-width: 12px;
+    max-height: 12px;
+    @media screen and (min-width: 1280px){
+      max-width: 20px;
+      max-height: unset;
+    }
+    
 
     path{
       transition: all .3s ease;
@@ -1520,7 +1547,86 @@ body {
 .nav-search {
   width: 100%;
   display: block;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
+.nav-subscribe {
+  width: 100%;
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
+
+  .nav-search-box {
+    background-color: transparent;
+    border: 1px solid #fff;
+    height: 48px;
+    border-radius: 24px;
+  }
+
+  .nav-search-query {
+    input {
+      color: #fff;
+      background-color: transparent;
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 36px;
+      letter-spacing: 1px;
+
+      &::placeholder{
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 36px;
+        letter-spacing: 1px;
+      }
+    }
+  }
+
+  .nav-search-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid #fff;
+    transform: translateX(5px);
+    transition: all .3s ease;
+
+    &:hover {
+      background-color: #FFFFFF;
+      svg path{
+        stroke: #EE2742;
+      }
+    }
+  
+    &:focus{
+      background-color: #AA0017;
+      svg path{
+        stroke: #EE2742;
+      }
+    }
+
+    &::before{
+      display: none;
+    }
+    svg{
+      max-width: 9px;
+      width: 100%;
+      height: auto;
+
+      path {
+        transition: all .3s ease;
+      }
+    }
+  }
+}
+
 .nav-search-box {
   display: flex;
   flex-flow: row nowrap;
@@ -1922,7 +2028,7 @@ body {
   .two-nav-list {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(2, 35%);
     grid-template-rows: auto;
     border-bottom: 0 none;
   }
@@ -3911,6 +4017,13 @@ body {
     }
   }  
 
+  .project-card-head, .project-card-subtitle {
+    @media screen and (min-width: 450px) {
+      max-width: 82%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
   .project-card-head {
 
   }
@@ -5070,7 +5183,7 @@ body {
   }
 }
 .howto-box {
-  margin-top: var(--x-pad);
+  margin-top: 33px;
 }
 
 .howto-card {
@@ -5107,6 +5220,7 @@ body {
 }
 .howto-card-head {
   font-size: 24px;
+  line-height: 40px;
 }
 .howto-card-btn {
   font-weight: 500;
@@ -5176,7 +5290,7 @@ body {
     justify-content: center;
     align-items: center;
     position: absolute;
-    bottom: var(--x-pad);
+    bottom: 23px;
     left: var(--x-pad);
     width: 40px;
     height: 40px;
@@ -5257,6 +5371,34 @@ body {
   .swiper-wrapper[data-current-slide="2"] .swiper-slide:nth-child(2) {
     transform: translate(25%, 0);
   }
+}
+
+.swiper-howto {
+  .swiper-slide:nth-child(1){
+    .howto-card-btn {
+      &:hover {
+        background-color: #fff;
+        color: #EE2742;
+      }
+      &:focus {
+        background-color: #AA0017;
+        color: #EE2742;
+      }
+    }
+  }
+  .swiper-slide:nth-child(2), .swiper-slide:nth-child(3){
+    .howto-card-btn {
+      &:hover {
+        background-color: #EE2742;
+        color: #fff;
+      }
+      &:focus {
+        background-color: #DE1631;
+        color: #fff;
+      }
+    }
+  }
+  
 }
 @media screen and (max-width: 767px) {
   .howto-card-text {
@@ -5567,6 +5709,7 @@ body {
     border-radius: 50%;
     transform: translate(0, -50%);
     border: 1px solid #868686;
+    background-color: transparent;
     justify-content: center;
     display: flex;
     justify-content: center;
@@ -5596,9 +5739,19 @@ body {
 
     &:hover{
       border-color: #EE2742;
+      background-color: #EE2742;
       svg{
         path{
-          stroke: #EE2742;
+          stroke: #fff;
+        }
+      }
+    }
+    &:focus{
+      border-color: #DE1631;
+      background-color: #DE1631;
+      svg{
+        path{
+          stroke: #fff;
         }
       }
     }
@@ -5643,6 +5796,10 @@ body {
     max-width: 330px;
     width: 100%;
     margin: 0 auto;
+
+    &:hover {
+      text-decoration: underline;
+    }
 
     @media screen and (min-width: 768px) {
       margin: unset;
@@ -5859,6 +6016,37 @@ body {
 
     @media screen and (min-width: 768px) {
       height: 600px;
+    }
+
+    img {
+      position: absolute;
+      //z-index: 2;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  &.banner-gradient__zvit__one {
+    height: unset;
+
+    @media screen and (min-width: 768px) {
+      height: 600px;
+    }
+
+    img {
+      width: 100%;
+      height: auto;
+      @media screen and (min-width: 768px) {
+        position: absolute;
+        //z-index: 2;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
     }
   }
   &.banner-gradient__projects {
@@ -6212,7 +6400,7 @@ body {
     }
     
     .separate-section-visual {
-      padding: var(--x-pad) 0;
+      //padding: var(--x-pad) 0;
 
       .separate-section-visual__logo {
         border: 1px solid #9EBAAE;
@@ -6259,6 +6447,7 @@ body {
       @media screen and (min-width: 768px) {
         padding: var(--x-pad);
         background-color: transparent;
+        padding-top: 0;
       }
     }
     .separate-section__title {
@@ -8316,6 +8505,21 @@ body {
   &.toggle-section__profile {
     .toggle-section__head__container {
       overflow: hidden;
+      &.toggle-section__head__container__fixed{
+        top: 0;
+        left: 0;
+        width: 100%;
+        position: fixed;
+        background-color: #fff;
+        padding-top: 20px;
+        padding-left: var(--x-pad);
+        padding-right: var(--x-pad);
+        z-index: 100;
+
+        .toggle-section-head {
+          margin-bottom: 10px;
+        }
+      }
     }
     .toggle-section-head {
       overflow: scroll;
@@ -8534,7 +8738,7 @@ body {
     width: 100%;
     margin-bottom: 14px;
 
-    &:nth-child(3) {
+    &:nth-child(4) {
       margin-bottom: 48px;
     }
 
@@ -8560,6 +8764,7 @@ body {
         font-weight: 300;
         font-size: 12px;
         line-height: 12px;
+        font-style: inherit;
 
         @media screen and (min-width: 768px) {
           font-size: 14px;
@@ -8703,6 +8908,7 @@ body {
   .two-col-body {
     display: none;
     padding-top: 30px;
+    //transition: all .3s ease;
     p{
       margin-bottom: 10px;
       &:last-child{
@@ -8718,10 +8924,22 @@ body {
   .two-col-head {
     position: relative;
     z-index: 3;
+    transition: all 0.01s ease;
+    &.two-col-head__filter__active {
+      width: 68%;
+      padding-right: 0;
+
+      @media screen and (max-width: 1310px) {
+        width: 85%;
+      }
+      @media screen and (max-width: 990px) {
+        width: 100%;
+      }
+    }
   }
 }
 
-.projects-directions-filter {
+.projects-directions-filter__container {
   margin-top: 8px;
   background: #FFFFFF;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
@@ -8730,25 +8948,56 @@ body {
 
   display: flex;
   flex-direction: column;
-
+  position: relative;
   // position: absolute;
   // width: 100%;
   // bottom: -318px;
   // left: 0;
 
-  &_active-filter {
-
-  }
-
   @media screen and (min-width: 768px) {
     position: static;
-    display: block;
     background-color: transparent;
     box-shadow: unset;
     padding: unset;
+    flex-direction: row;
+  }
+}
+.projects-directions-filter {
+  @media screen and (min-width: 768px) {
+    margin-right: 40px;
+
+    @media screen and (max-width: 990px) {
+      margin-right: 20px;
+    }
+    &:last-child{
+      margin-right: 0;
+    }
+  }
+  
+  //.projects-directions-filter__close 
+  &__close {
+    display: none;
+    cursor: pointer;
+    @media screen and (min-width: 768px) {
+      position: absolute;
+      top: 0px;
+      right: 0px;
+      width: 16px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      svg {
+        width: 100%;
+        height: auto;
+      }
+    }
   }
 
+  &_active-filter {
 
+  }
+  
+  
   //.projects-directions-filter__item 
   &__item {
     display: flex;
@@ -8956,17 +9205,25 @@ body {
   line-height: 18px;
   color: #fff;
   background-color: #EE2742;
+  border: 1px solid #EE2742;
   display: inline-block;
   text-transform: uppercase;
   font-weight: 500;
   transition: all .3s ease;
 
   &:hover{
-    background-color: #000;
+    background-color: #fff;
+    color: #EE2742;
     &::after {
       color: #EE2742;
     }
-
+  }
+  &:focus{
+    background-color: #fff;
+    color: #DE1631;
+    &::after {
+      color: #DE1631;
+    }
   }
 
   &::after {
@@ -9090,6 +9347,16 @@ body {
       }
     }
     .toggle-section-head__faq {
+      .toggle-section-head__item {
+        &._active-page {
+          &:hover {
+            color: #000;
+          }
+          &:focus{
+            color: #000000;
+          }
+        }
+      }
       @media screen and (max-width: 767px) {
         box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
         border-radius: 20px;
@@ -9188,6 +9455,18 @@ body {
     width: 100%;
     padding: 15px 10px;
     margin-top: 2rem;
+    transition: all .3s ease;
+
+    &:hover{
+      border-color: #EE2742;
+      background-color: #EE2742;
+      color: #fff;
+    }
+    &:focus{
+      border-color: #DE1631;
+      background-color: #DE1631;
+      color: #fff;
+    }
 
     @media screen and (min-width: 768px) {
       color: #000000;
@@ -9198,7 +9477,7 @@ body {
   }
 }
 
-.toggle-section-head__faq {
+.toggle-section-head__faq.toggle-section-head__faq {
   display: none;
   margin-bottom: 0;
   //padding-top: 29px;
@@ -9437,7 +9716,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
   }
 
   &.parthner-page-help-form {
@@ -9447,7 +9726,7 @@ body {
   input[type=text], input[type=email], input[type=tel], input[type=number], textarea {
 
     width: 100%;
-    background: rgba(255, 255, 255, 1);
+    background: rgba(255, 255, 255, 0.8);
     border: 1px solid #879E95;
     border-radius: 18px;
     padding: 10px 12px;
@@ -9459,7 +9738,7 @@ body {
     transition: all .3s ease;
 
     &:focus, &:active {
-      background: rgba(255, 255, 255, 1);
+      //background: rgba(255, 255, 255, 1);
     }
     &::placeholder{
 
@@ -9652,6 +9931,12 @@ body {
     &__input__wrapper {
       margin-bottom: 12px;
       width: 100%;
+
+      &:last-child{
+        @media screen and (min-width) {
+          margin-bottom: 0;
+        }
+      }
 
       p{
         font-weight: 300;
@@ -10112,6 +10397,7 @@ body {
         padding-top: 50%;
         width: 100%;
         display: block;
+        background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0.27%, rgba(0, 0, 0, 0) 83.94%);
 
         @media screen and (min-width: 1024px) {
           padding-top: 45.6%;
@@ -10119,6 +10405,7 @@ body {
       }
 
       img{
+        z-index: -1;
         display: block;
         width: 100%;
         height: 100%;
@@ -10254,9 +10541,25 @@ body {
     .swiper-button-prev, .swiper-button-next {
       border-color: #fff;
       transform: translate(0, 50%);
+      background-color: transparent;
 
-      &:hover {
+      &:hover{
         border-color: #EE2742;
+        background-color: #EE2742;
+        svg{
+          path{
+            stroke: #fff;
+          }
+        }
+      }
+      &:focus{
+        border-color: #DE1631;
+        background-color: #DE1631;
+        svg{
+          path{
+            stroke: #fff;
+          }
+        }
       }
     }
     .swiper-button-prev {
@@ -10291,6 +10594,12 @@ body {
     color: #fff;
   }
 
+  .separate-section-card {
+    @media screen and (min-width: 768px) {
+      padding: var(--x-pad) 0;
+    }
+    
+  }
   .faq-form {
     input[type=text], input[type=tel], input[type=number], textarea {
       background: rgba(255, 255, 255, 0.8);
@@ -10435,7 +10744,8 @@ body {
       width: 100%;
       background-color: #fff;
 
-      margin: 50px auto;
+      // margin: 50px auto;
+      margin: 0px auto;
     }
   }
   
@@ -10450,6 +10760,9 @@ body {
 
     @media screen and (min-width: 768px) {
       margin-bottom: 1.5rem;
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 18px;
     }
     
   }
@@ -10588,9 +10901,25 @@ body {
   &__item {
     width: 100%;
     margin-bottom: 8px;
+    text-align: left;
 
     &:last-child{
       margin-bottom: 0;
+    }
+
+    em {
+      padding: 7px 13px 0;
+      color: #EE2536;
+      font-weight: 300;
+      font-size: 12px;
+      line-height: 12px;
+      font-style: inherit;
+
+      @media screen and (min-width: 768px){
+        font-size: 14px;
+        line-height: 14px;
+        padding: 7px 17px 0;
+      }
     }
 
     @media screen and (min-width: 768px) {
@@ -10612,8 +10941,9 @@ body {
     width: 24px;
     right: 12px;
     top: calc(50%);
-    transform: translate(0, -50%);
+    transform: translate(0, -130%);
     overflow: hidden;
+    
 
     @media screen and (min-width: 768px) {
       right: 14px;
@@ -11466,6 +11796,7 @@ body {
     @media screen and (min-width: 768px) {
       flex: 0 0 calc(50% - 30px);
       margin-right: 30px;
+      margin-bottom: 0;
       &:last-child{
         margin-right: 0;
       }
@@ -13240,4 +13571,64 @@ body {
     .larger {
     }
   }
+}
+
+.swiper-zvity-other {
+
+  .swiper-wrapper {
+    @media screen and (min-width: 1024px) {
+      column-gap: 5rem;
+    }
+  }
+
+  .project-card-data {
+    &::before{
+      padding-top: 150%;
+    }
+  }
+
+  .project-card-head {
+    strong {
+      font-size: 18px;
+      line-height: 16px;
+      margin-bottom: 12px;
+
+      @media screen and (min-width: 768px) {
+        margin-bottom: 16px;
+      }
+    }
+  }
+}
+
+
+//BREADCRUMPS-WP-------------------------------
+.container__breadcrumbs{
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
+}
+.yoast-breadcrumbs {
+  
+}
+.breadcrumbs {
+    // margin-top: 10px;  
+    // margin-bottom: 60px;  
+    padding: 0 var(--x-pad);
+    span{
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 16px;
+        color: #868686;
+
+        a{
+            color: inherit;
+            margin-right: 3px;
+        }
+
+        .breadcrumb_last {
+            color: #868686;
+            margin-left: 3px;
+            cursor: default;
+        }
+    }
 }
